[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driln"
version = "0.1.0"
description = "Intelligent automated pentesting engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Driln Team" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "typer[all]>=0.15",
    "structlog>=24.4",
    "httpx>=0.28",
    "jinja2>=3.1",
    "rich>=13.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
driln = "driln.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["driln*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
